--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-python-dotenv
-zeep
-pydantic
-requests
-urllib3
-aiohttp
-pyyaml
-wxc-sdk >= 1.3.0
+attrs==22.2.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
+idna==3.4
+isodate==0.6.1
+lxml==4.9.2
+platformdirs==2.6.2
+pydantic==1.10.4
+python-dotenv==0.21.0
+pytz==2022.7
+PyYAML==6.0
+requests==2.28.2
+requests-file==1.5.1
+requests-toolbelt==0.10.1
+six==1.16.0
+typing_extensions==4.4.0
+-e git+https://github.com/jeokrohn/ucmaxl@97cf28760330317d73ace4e3f74ee33340cb67c4#egg=ucmaxl
+urllib3==1.26.14
+zeep==4.2.1
