--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-attrs==22.2.0
-certifi==2022.12.7
-charset-normalizer==3.0.1
+-i https://pypi.org/simple
+attrs==23.1.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
 idna==3.4
 isodate==0.6.1
 lxml==4.9.2
-platformdirs==2.6.2
-pydantic==1.10.4
-python-dotenv==0.21.0
-pytz==2022.7
-PyYAML==6.0
-requests==2.28.2
+platformdirs==3.5.1
+pydantic==1.10.8
+python-dotenv==0.21.1
+pytz==2023.3
+pyyaml==6.0
+requests==2.31.0
 requests-file==1.5.1
-requests-toolbelt==0.10.1
+requests-toolbelt==1.0.0
 six==1.16.0
-typing_extensions==4.4.0
+typing-extensions==4.6.2
 -e git+https://github.com/jeokrohn/ucmaxl@41fd647731fc8176f1c59a081598b627607814cc#egg=ucmaxl
-urllib3==1.26.14
+urllib3==1.26.16
 zeep==4.2.1
